--- a/i18n/locales/de.json
+++ b/i18n/locales/de.json
@@ -58,5 +58,10 @@
       "title": "Wissenschaft statt Bro-Science",
       "text": "Hinter der einfachen Oberfläche arbeitet ein komplexes Deep-Learning-Modell, trainiert mit über 1.000 Athletenjahren. Entwickelt mit Sportwissenschaftlern und Diagnostik-Experten (HYCYS). Dein Training basiert auf validen physiologischen Prinzipien, nicht auf Zufall."
     }
+  },
+  "magicMoment": {
+    "line1": "Keine überfüllten Dashboards.",
+    "line2": "Keine komplizierten Grafiken.",
+    "line3": "Sondern ein Dialog, der Klarheit schafft."
   }
 }
