--- a/i18n/locales/en.json
+++ b/i18n/locales/en.json
@@ -63,5 +63,15 @@
     "line1": "No cluttered dashboards.",
     "line2": "No complicated charts.",
     "line3": "Instead a dialogue that creates clarity."
+  },
+  "trust": {
+    "titlePrefix": "Built on performance.",
+    "titleHighlight": "Backed by science.",
+    "text": "YOUB combines athletic experience with scientific methodology. Built by athletes, developed with data – for decisions that work in everyday life.",
+    "badges": {
+      "hycys": "In partnership with HYCYS",
+      "gdpr": "GDPR compliant",
+      "aiAct": "AI Act\nready"
+    }
   }
 }
