--- a/i18n/locales/en.json
+++ b/i18n/locales/en.json
@@ -8,37 +8,37 @@
   },
   "hero": {
     "badge": "New Era of Monitoring",
-    "titlePrefix": "Build with",
-    "titleHighlight": "Confidence.",
-    "subtitle": "Track your performance with precision. Gain deep insights into your physical capacity and optimize your training like never before.",
+    "titlePrefix": "A coach you can talk to.",
+    "titleHighlight": "Not a dashboard you have to figure out.",
+    "subtitle": "YOUB knows your data, but also your daily life. Training is created through dialogue – together with you.",
     "ctaPrimary": "Get Started",
     "ctaSecondary": "View Demo"
   },
   "chat": {
     "title": "Analytics Chat",
-    "user1": "Compare my training load from this week to last week.",
-    "ai1": "Your ATL increased by 15%. Recovery remains stable. Rest tomorrow to optimize.",
-    "user2": "Should I aim for a higher heart rate in my next zone 2 run?",
-    "ai2": "Maintain 135-142 bpm. Pushing higher will shift you into zone 3, reducing aerobic adaptations."
+    "user1": "I feel tired, but intervals are on the schedule.",
+    "ai1": "Your feeling matches your data. Today is a full day – let's adjust the training.",
+    "user2": "And tomorrow?",
+    "ai2": "Tomorrow has more space. Then we'll tackle the intervals."
   },
   "footer": {
     "rights": "© 2026 Youb. All rights reserved.",
     "language": "Language"
   },
   "problem": {
-    "title": "Data without meaning is just noise.",
-    "subtitle": "Your wearables collect terabytes of data. But they don't tell you what it means for your life.",
+    "title": "Your training competes with your daily life.",
+    "subtitle": "You want to reach your goal. But between work, family, and daily life, there's often no time to analyze training data and constantly make new decisions.",
     "pillar1": {
-      "title": "Data Overload",
-      "text": "Thousands of metrics, but no clear focus. You get lost in numbers instead of making progress."
+      "title": "Lack of Time",
+      "text": "You want to train effectively. But not plan, evaluate, and question everything every single day."
     },
     "pillar2": {
-      "title": "Missing Context",
-      "text": "Low recovery score? High heart rate? Without the context of your daily life, it's all just guesswork."
+      "title": "Mental Overload",
+      "text": "Too many decisions. Too many numbers. Too little clarity."
     },
     "pillar3": {
-      "title": "Static Plans",
-      "text": "Classic training plans ignore stress, sleep, and fatigue. YOUB adapts to you, not the other way around."
+      "title": "Rigid Plans",
+      "text": "Plans expect perfect weeks. Your daily life isn't like that."
     }
   },
   "solution": {
