adapt science card in solution section

--- a/i18n/locales/de.json
+++ b/i18n/locales/de.json
@@ -55,8 +55,8 @@
     },
     "block3": {
       "tag": "Science over Bro-Science",
-      "title": "Wissenschaft statt Bro-Science",
-      "text": "Hinter der einfachen Oberfläche arbeitet ein komplexes Deep-Learning-Modell, trainiert mit über 1.000 Athletenjahren. Entwickelt mit Sportwissenschaftlern und Diagnostik-Experten (HYCYS). Dein Training basiert auf validen physiologischen Prinzipien, nicht auf Zufall."
+      "title": "Wissenschaft statt Blackbox",
+      "text": "Hinter jeder Empfehlung steht ein klarer Entscheidungsweg, aufgebaut aus Sportwissenschaft und den Regeln, die HYCYS in der Praxis nutzt.\nKI verwenden wir, um diesen Entscheidungsweg verständlich, dialogisch und alltagstauglich zu machen nicht um Trainingspläne in einer Blackbox zu erzeugen."
     }
   },
   "magicMoment": {
