--- a/i18n/locales/en.json
+++ b/i18n/locales/en.json
@@ -55,8 +55,8 @@
     },
     "block3": {
       "tag": "Science Over Bro-Science",
-      "title": "Science Instead of Bro-Science",
-      "text": "Behind the simple interface works a complex deep learning model, trained with over 1,000 athlete years. Developed with sports scientists and diagnostic experts (HYCYS). Your training is based on valid physiological principles, not chance."
+      "title": "Science Instead of a Black Box",
+      "text": "Behind every recommendation is a clear decision-making path, built on sports science and the rules used by HYCYS in practice.\nWe use AI to make this decision path understandable, conversational, and suitable for everyday use not to generate training plans in a black box."
     }
   },
   "magicMoment": {
