delete unused sections and set up seo

--- a/i18n/locales/de.json
+++ b/i18n/locales/de.json
@@ -108,5 +108,9 @@
       "submit": "Early Access anfragen"
     },
     "microcopy": "Keine Kreditkarte erforderlich. DSGVO-konform. Benachrichtigung bei verfügbarem Platz."
+  },
+  "seo": {
+    "title": "YOUB - Training, das sich an dein Leben anpasst",
+    "description": "YOUB ist dein intelligenter KI-Coach für Triathlon, Radsport und Laufen. Wir verbinden Sportwissenschaft mit Echtzeit-Datenanalyse für dein optimales Training."
   }
 }
