--- a/i18n/locales/de.json
+++ b/i18n/locales/de.json
@@ -205,6 +205,25 @@
       "p6": "Das wollte ich ändern.",
       "p7": "Ich habe YOUB gegründet, um „meinen Markus“ jedem zur Verfügung zu stellen. Wir haben Markus' Logik, seine Empathie und sein sportwissenschaftliches Wissen in eine KI übersetzt. Damit du genau diese tägliche Rücksprache, dieses feinfühlige Anpassen und diese Sicherheit hast – 24/7, direkt in deiner Tasche.",
       "p8": "YOUB ist der Versuch, dieses Glück zu teilen."
+    },
+    "team": {
+      "headline": "Das Team hinter YOUB",
+      "subline": "Expertise aus Sportwissenschaft, Technologie und Leidenschaft.",
+      "member1": {
+        "name": "Felix Hermanutz",
+        "role": "Founder",
+        "text": "Leidenschaftlicher Radsportler und Visionär. Felix verbindet seine Erfahrung aus dem Leistungssport mit der Vision, High-End Coaching für jeden zugänglich zu machen."
+      },
+      "member2": {
+        "name": "Thomas Grininger",
+        "role": "Technisches Mastermind",
+        "text": "Vom Center Court in den Code. Als ehemaliger Tischtennis-Profi weiß Thomas, dass am Ende Nuancen über Sieg oder Niederlage entscheiden. Diese kompromisslose Präzision und die Fähigkeit, unter Höchstbelastung klare Entscheidungen zu treffen, stecken heute in der Architektur von YOUB. Er baut das technologische Fundament, das so reaktionsschnell ist wie ein Reflex – damit die KI dein Leben in Echtzeit versteht."
+      },
+      "member3": {
+        "name": "Markus Hertlein",
+        "role": "Wissenschaftlicher Architekt",
+        "text": "Das Hirn hinter der Logik. Markus bringt jahrelange Erfahrung aus der Diagnostik und dem High-Performance-Coaching bei Hycys mit in das System. Er hat gelernt, wie man Profis zu Siegen führt – und übersetzt dieses Wissen nun für YOUB in eine Intelligenz, die jedem Athleten hilft, sein Potenzial sicher zu erreichen."
+      }
     }
   }
 }
